# napi-rs-echo-rust-client

./: .gitignore  .pnp.cjs  Cargo.toml  README.md  build.rs  index.d.ts  index.js  package-lock.json  package.json  test.darwin-arm64.node  test.mjs
.github/workflows/: node.js.yml
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: cclient.rs  lib.rs
