[package]
edition = "2021"
name = "test"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.1", default-features = false, features = [
  "napi4",
  "tokio_rt",
] }
napi-derive = "2.9.5"
tonic = "0.8"
anyhow = "1.0"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
lazy_static = "1.4"

[build-dependencies]
napi-build = "2.0.1"
tonic-build = "0.8"

[profile.release]
lto = true
